# ansible-collection-monitoring

./: .gitignore  CLAUDE.md  Makefile  README.md  devbox.json  galaxy.yml  justfile  noxfile.py  pyproject.toml  requirements.yml  roles.yml
.github/workflows/: libvirt.yml  lint.yml  python.yml  tag.yml  version.yml
extensions/molecule/common/: create.yml  destroy.yml  install.yml  prepare.yml  uninstall.yml  verify.yml
extensions/molecule/default/: molecule.yml
extensions/molecule/legacy/: molecule.yml
playbooks/: check.yml  install.yml  uninstall.yml
playbooks/beats/: install.yml  uninstall.yml
playbooks/tools/: install.yml  uninstall.yml
playbooks/vector/: install.yml  uninstall.yml
playbooks/vector/templates/: beat.yaml.j2  filebeat.yaml.j2  filesystem.yaml.j2  metricbeat.yaml.j2  ntp.yaml.j2  vector.yaml.j2
python/: README.md
python/src/pokerops/monitoring/: __init__.py  __main__.py  cli.py  filesystem.py  ntp.py  tools.py
python/tests/: __init__.py  test_cli.py  test_filesystem.py  test_ntp.py
roles/: .gitignore
roles/defaults/defaults/: main.yml
roles/monitoring/defaults/: main.yml
src/pokerops/monitoring/: cli.py  ntp.py
