[project]
name = "pokerops-monitoring"
version = "0.0.1"
description = "Pokerops monitoring scripts"
readme = "README.md"
authors = [{ name = "Ted Cook", email = "teodoro.cook@gmail.com" }]
requires-python = ">=3.12,<3.14"
dependencies = ["typer>=0.15.0", "rich>=13.0.0", "ntplib>=0.4.0"]

[dependency-groups]
dev = [
  "pokerops-ansible-utils@git+https://github.com/pokerops/ansible-utils@master",
]

[project.scripts]
pokerops-monitoring = "pokerops.monitoring.cli:app"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pokerops.monitoring"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 160
